--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,6 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://kit.fontawesome.com/070b99e268.js" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
   <body>
